Button from welcome page to new user signup path

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Welcome To Runner's Analyzer</h1>
 
-<button type="button"> Sign Up </button> <button type="button"> Sign In </button>
+<%= button_to "Sign Up", new_user_registration_path, :method => "get" %>
+<br>
+<button type="button"> Sign In </button>
 
 <div class = "pages">
     <h3> Pages </h3>
