Create an index method for races andf redirect there

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
     <h3> Pages </h3>
     <ul>
         <li><%=link_to "Log A Race", new_race_path, :method => "post" if user_signed_in? %></li>
-        <li>View Your Races</li>
+        <li><%=link_to "View Your Races", races_path, :method => "get" if user_signed_in? %></li>
         <li>Metrics Dashboard</li>
     </ul>
 </div>
